--- a/index.rmd
+++ b/index.rmd
@@ -39,7 +39,7 @@ eval(parse('code_rmd.r', encoding="UTF-8"))
 
 코사인 유사도가 무엇인지를 따지지 전에 먼저 필요한 것이 있다. 먼저 어떤 관찰값의 속성(feature)을 벡터로 나타내야 한다. 어차피 코사인 유사도가 값이라면 속성이 수치로 바뀌어야 하는 것은 당연한 이치다. 차원이 같은 두 개의 벡터가 있을 때 이 벡터들 사이의 각도의 코사인을 재는 것이 코사인 유사도다. 
 
-코사인 값은 무엇을 의미할까? 두 벡터가 서로 붙어있다면 1에 가까운 값이 된다. 반면, 큰 상관이 없다면 0이 된다. 반대의 지향을 갖고 있다면 -1에 가깝게 된다.
+코사인 값은 무엇을 의미할까? 두 벡터가 서로 붙어있다면 1에 가까운 값이 된다. 자기 자신에 대한 코사인 유사도는 1이다. 반면, 큰 상관이 없다면 0이 된다. 반대의 지향을 갖고 있다면 -1에 가깝게 된다.
 
 <center>
 <br><br>
@@ -67,7 +67,7 @@ eval(parse('code_rmd.r', encoding="UTF-8"))
 
 ## Song Data 
 
-코사인 유사도를 살필 수 있는 좋은 사례가 없을까, 찾다가 좋은 [튜토리얼](https://bgstieber.github.io/post/recommending-songs-using-cosine-similarity-in-r/)을 발견했다. 이 튜토리얼의 목적인 사용자별 플레이 기록에 근거해서 추천곡 목록을 생성하는 것이다. 여기서 추천곡이란 어떤 특정한 노래와 비슷한 노래를 나타낸다. 앞서 말했지만 관심 객체를 벡터로 나타내야 한다. 이 튜토리얼에서는 다음과 같이 벡터를 생성했다. 
+코사인 유사도를 살필 수 있는 좋은 사례가 없을까, 찾다가 좋은 [튜토리얼](https://bgstieber.github.io/post/recommending-songs-using-cosine-similarity-in-r/)을 발견했다. 이 튜토리얼의 목적이 사용자별 플레이 기록에 근거해서 추천곡 목록을 생성하는 것이다. 여기서 추천곡이란 어떤 특정한 노래와 비슷한 노래를 나타낸다. 앞서 말했지만 관심 대상을 벡터로 나타내야 한다. 이 튜토리얼에서는 다음과 같이 벡터를 생성했다. 
 
 \begin{align}
 s_i = [0, 0, \dotsc, \underset{\text{$u_j$의 청취횟수}}{5}, \dotsc]
@@ -91,10 +91,10 @@ knitr::kable(head(all_data_top_1k , 6))
 
 ### 코사인 유사도 계산 
 
-이를 계산하는 함수는 다음과 같다. 
+이를 계산하는 함수 `calc_cos_sim`는 다음과 같다. 
 
 ```{r eval = FALSE}
-calc_dot_product <- function(vec_x, vec_y){
+calc_cos_sim <- function(vec_x, vec_y){
   
   vec_x %>% ungroup() %>% select(user, plays) -> vec_x
   vec_y %>% ungroup() %>% select(user, plays) -> vec_y
@@ -120,7 +120,7 @@ calc_dot_product <- function(vec_x, vec_y){
 
 ### 그루핑을 통한 코사인 유사도 계산 
 
-이 처리는 함수 `generate_song_list_by_cos_sim` 내부에서 수행된다. 즉, 적당한 tibble과 타겟 song_id가 주어져 있을 때 `song_id` 별로 그루핑을 한 뒤 이 그룹에 대해서 위에서 정의한 `calc_dot_product`를 일괄적으로 적용한다. 
+이 처리는 함수 `generate_song_list_by_cos_sim` 내부에서 수행된다. 즉, 적당한 tibble과 타겟 song_id가 주어져 있을 때 `song_id` 별로 그루핑을 한 뒤 이 그룹에 대해서 위에서 정의한 `calc_cos_sim`을 일괄적으로 적용한다. 
 
 ```{r eval=FALSE}
 tblf1 %>% 
