--- a/index.rmd
+++ b/index.rmd
@@ -1,7 +1,8 @@
 ---
 title: "Cosine Similarity: Song Recommendation"
 date: "2019-07-26 (current version in `r format(Sys.time(), '%Y-%m-%d')`)"
-author: 'Jun-Sok Huhh &ensp; [`r fontawesome::fa("envelope", fill="white", height=12)`](mailto:anarinsk@gmail.com) [`r fontawesome::fa("home", fill="white", height=12)`](http://lostineconomics.com) [`r fontawesome::fa("github", fill="white", height=12)`](http://github.com/anarinsk)' 
+author: 
+- 'Jun-Sok Huhh [`r fontawesome::fa("envelope", fill="black", height=12)`](mailto:anarinsk@gmail.com) [`r fontawesome::fa("home", fill="black", height=12)`](http://lostineconomics.com) [`r fontawesome::fa("github", fill="black", height=12)`](http://github.com/anarinsk)' 
 
 output:
   #rmdformats::html_docco:
@@ -37,9 +38,9 @@ eval(parse('code_rmd.r', encoding="UTF-8"))
 
 ## 코사인 유사도란 무엇인가? 
 
-코사인 유사도가 무엇인지를 따지지 전에 먼저 필요한 것이 있다. 먼저 어떤 관찰값의 속성(feature)을 벡터로 나타내야 한다. 어차피 코사인 유사도가 값이라면 속성이 수치로 바뀌어야 하는 것은 당연한 이치다. 차원이 같은 두 개의 벡터가 있을 때 이 벡터들 사이의 각도의 코사인을 재는 것이 코사인 유사도다. 
+코사인 유사도가 무엇인지를 따지지 전에 먼저 따져야 할 것이 있다. 코사인 유사도를 구하려면, 해당 관찰값의 속성(feature)을 벡터로 표현해야 한다. 차원이 같은 두 개의 벡터가 있을 때 이 벡터들 사이의 각도의 코사인을 값이 코사인 유사도다. 
 
-코사인 값은 무엇을 의미할까? 두 벡터가 서로 붙어있다면 1에 가까운 값이 된다. 자기 자신에 대한 코사인 유사도는 1이다. 반면, 큰 상관이 없다면 0이 된다. 반대의 지향을 갖고 있다면 -1에 가깝게 된다.
+코사인 값은 무엇을 의미할까? 두 벡터가 비슷한 방향을 향하고 있다면 1에 가까운 값이 된다. 자기 자신에 대한 코사인 유사도는 1이다. 반면 두 벡터가 큰 상관이 없다면 0이다. 반대의 지향을 갖고 있다면 -1에 가깝게 된다.
 
 <center>
 <br><br>
@@ -47,7 +48,7 @@ eval(parse('code_rmd.r', encoding="UTF-8"))
 <br><br>
 </center>
 
-코사인 유사도는 두 벡터로 잴 수 있는 가장 기본적인 지표인 '거리'와 어떻게 다를까? 
+코사인 유사도는 두 벡터로 잴 수 있는 가장 기본적인 지표인 (유클리드) '거리'와 어떻게 다를까? 
 거리의 경우는 둘 사이가 얼마나 떨어져 있는지를 측정한다. 2차원 벡터를 생각해보자. $(10, 10)$과 $(100,100)$이 있다고 하자. 두 벡터는 같은 지향을 지니고 있기 때문에 코사인 유사도는 1이다. 반면, 거리는 $\sqrt{(100-10)^2 + (100-10)^2}$이다. 
 즉, 코사인 유사도는 해당 벡터의 절대 위치보다는 어느 방향을 향하고 있는지를 측정한다. 
 
@@ -63,21 +64,21 @@ eval(parse('code_rmd.r', encoding="UTF-8"))
 \cos \theta = \dfrac{\mathbf a \cdot \mathbf b}{\lVert \mathbf a \rVert \lVert \mathbf b \rVert}
 \end{align}
 
-결국 두 벡터의 길이(노름)과 닷프로덕트만 있으면 코사인 값을 쉽게 구할 수 있다. 
+요약하면 두 벡터의 길이(norm)와 닷프로덕트만 계산하면 코사인 값을 얻을 수 있다. 
 
 ## Song Data 
 
-코사인 유사도를 살필 수 있는 좋은 사례가 없을까, 찾다가 좋은 [튜토리얼](https://bgstieber.github.io/post/recommending-songs-using-cosine-similarity-in-r/)을 발견했다. 이 튜토리얼의 목적이 사용자별 플레이 기록에 근거해서 추천곡 목록을 생성하는 것이다. 여기서 추천곡이란 어떤 특정한 노래와 비슷한 노래를 나타낸다. 앞서 말했지만 관심 대상을 벡터로 나타내야 한다. 이 튜토리얼에서는 다음과 같이 벡터를 생성했다. 
+코사인 유사도를 살필 수 있는 좋은 사례가 없을까, 찾다가 좋은 [튜토리얼](https://bgstieber.github.io/post/recommending-songs-using-cosine-similarity-in-r/)을 발견했다. 이 튜토리얼은 사용자별 플레이 기록을 통해 추천곡 목록을 생성하는 내용을 담고 있다. 여기서 추천곡이란 어떤 특정한 노래와 비슷한 노래들을 지칭한다. 비슷함의 정의를 코사인 유사도로 두는 것이 핵심이다. 앞서 말했지만 코사인 유사도를 계산하라면 관심 대상을 벡터로 나타내야 한다. 튜토리얼에서는 다음과 같이 벡터를 생성했다. 
 
 \begin{align}
 s_i = [0, 0, \dotsc, \underset{\text{$u_j$의 청취횟수}}{5}, \dotsc]
 \end{align}
 
-이용자의 집합 $U = \left\{ u_1, u_2, \dotsc, u_n \right\}$와 노래 집합 $S = \left\{ s_1, s_2, \dotsc, s_m \right\}$가 있다고 하자. $U$에 속하는 각 플레이어의 청취 횟수를 노래별($s_j$)로 벡터를 만든다. 만일 해당 플레이어의 청취 횟수가 없다면 0이 될 것이다. $s \in S$의 차원은 $m$이 된다. 두 노래 벡터 $s_i, s_j \in S$가 주어지면 코사인 유사도를 쉽게 측정할 수 있다. 해당 튜토리얼에 이를 진행하는 R 코드를 잘 담고 있으니 이를 반복하지 않다. 이 글에서는 같은 코사인 유사도를 측정하는 다른 방식을 제시해보겠다. 
+이용자의 집합 $U = \left\{ u_1, u_2, \dotsc, u_n \right\}$와 노래 집합 $S = \left\{ s_1, s_2, \dotsc, s_m \right\}$이 있다고 하자. $U$에 속하는 각 플레이어의 청취 횟수를 노래($s_j$) 벡터로 만든다. 만일 해당 플레이어의 $s_i$ 청취 횟수가 없다면 0이 될 것이다. $S$ 벡터 공간의 차원은 $m$이다. 두 노래 벡터 $s_i, s_j \in S$가 주어지면 코사인 유사도를 쉽게 측정할 수 있다. 해당 튜토리얼에 이를 진행하는 R 코드가 있고 이를 반복 해설하지 않다. 이 글에서는 같은 코사인 유사도를 측정하는 다른 방식을 제시해보겠다. 
 
 ## Cosine Similarity in a Tidy Way 
 
-R의 데이터 다루기에 기본기로 자리잡고 있는 Tidyverse에 기반해서 해당 계산을 다시 수행해보겠다. 우선, 위의 튜토리얼처럼 순진한 방식으로 계산을 해보기 바란다. 데이터를 다루는 관점에서 튜토리얼의 관점은 몇 가지 문제가 있다. 우선 노래가 매트릭스의 컬럼으로 가 있는데, 만일 노래를 1,000개에서 끊지 않는다면 매트릭스의 사이즈가 문제가 될 수 있다. 어차피 노래별로 그루핑해서 계산하는 것이라면 dplyr 패키지의 `group_by` 명령을 활용해 보다 쉽게 해결할 수 있지 않을까? 우선 이를 위해서 플레이 횟수가 많은 천곡의 리스트를 가져오겠다. 
+R의 데이터 다루기의 기본기로 자리잡아 가는 Tidyverse에 기반해서 코사인 유사도 계산을 다시 해보자. 우선, 위의 튜토리얼처럼 순진한 방식으로 계산을 해보기 바란다. 데이터를 다루는 관점에서 튜토리얼의 관점은 몇 가지 문제가 있다. 우선 노래가 매트릭스의 컬럼으로 가 있는데, 만일 노래를 1,000개에서 끊지 않는다면 매트릭스의 사이즈가 문제가 될 수 있다. 어차피 노래별로 그루핑해서 계산하는 것이라면 dplyr 패키지의 `group_by` 명령을 활용해 보다 쉽게 해결할 수 있지 않을까? 우선 이를 위해서 플레이 횟수가 많은 천곡의 리스트를 가져오겠다. 
 
 ```{r}
 knitr::kable(head(all_data_top_1k , 6))
@@ -116,7 +117,9 @@ calc_cos_sim <- function(vec_x, vec_y){
 }
 ```
 
-두 개의 벡터를 받아서 해당 각각 벡터의 길이와 닷프로덕트를 계산하고 이를 통해 코사인 유사도를 계산하는 함수다. 주의해야 할 점은 두 벡터의 길이가 동일해야 한다는 점이다. 만일 $s_i$에 속한 이용자와 $s_j$에 속한 이용자가 다르다면 둘의 합집합을 취해야 한다. 이때 각각의 노래에 속하지 않은 이용자의 재생 횟수는 0으로 처리하면 된다. 위 코드에서 `full_join`과 `replace_na`가 이를 처리해주고 있다. 
+두 개의 벡터를 받아서 해당 각각 벡터의 길이와 닷프로덕트를 계산하고 이를 통해 코사인 유사도를 계산하는 함수다. 주의해야 할 점이 있다. 앞서 말했듯이 코사인 유사도 계산에 들어가는 두 벡터의 차원이 동일해야 한다. 벡터의 길이는 대상 이용자 전체의 숫자가 되어야 한다. 그런데, 위의 코드를 보면 전체 이용자 보다는 닷 프로덕트를 구하는 두 개의 벡터 중 차원이 큰 것이 맞춰지게 되어 있다. 이는 계산 상의 편의를 위한 것이다. 어차피 비교가 되는 두 벡터 모두에서 제외된 차원은 벡터 값이 0이 되므로 곱해도 0이 된다. 편리한 계산을 위한 트릭 정도로 이해하면 좋겠다. 
+  
+만일 $s_i$에 속한 이용자와 $s_j$에 속한 이용자가 다르다면 둘의 합집합을 취해야 한다. 이때 각각의 노래에 속하지 않은 이용자의 재생 횟수는 0으로 처리하면 된다. 위 코드에서 `full_join`과 `replace_na`가 이를 처리해주고 있다. 
 
 ### 그루핑을 통한 코사인 유사도 계산 
 
@@ -129,7 +132,7 @@ tblf1 %>%
     arrange(-cos_sim) %>% view_songinfo()
 ```
 
-### 사례 
+### 사례: Nirvana and U2 
 
 ```{r}
 generate_song_list_by_cos_sim("SODEOCO12A6701E922", all_data_top_1k) %>% 
